deps/v8/test/message/arrow-missing.out
*%(basename)s:7: SyntaxError: Unexpected token )
function foo() { return(); }
                        ^
SyntaxError: Unexpected token )
